# futures-bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  overwatch_progress.md  planning.md  pyproject.toml  requirements.txt  research.md
config/: __init__.py  model_config.yaml  settings.py  trading_config.yaml
src/: __init__.py
src/data/: __init__.py  binance_client.py  historical_fetcher.py  realtime_streams.py  storage.py  validators.py
src/features/: __init__.py  engineering.py  indicators.py  time_features.py
src/utils/: __init__.py  config.py  helpers.py  logging.py  security.py
